# eeg-server

./: app.py  eeg.py  pyproject.toml
