[tool.poetry]
name = "eeg-server"
version = "0.1.0"
description = ""
authors = ["Michael Tseng <michael08120@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-socketio = "^5.3.6"
numpy = "^1.26.4"
serial = "^0.0.97"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
